# ai-cron

./: CLAUDE.md  claude-progress.md  feature-list.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: package.json  pnpm-lock.yaml
e2e/specs/: drink-water-task.spec.js
scripts/: version-bump.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  mcp-bridge.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: ai_parse.rs  mod.rs  plan_gen.rs  runner.rs  runs.rs  scheduler.rs  tasks.rs  tools.rs
src-tauri/src/db/: migrations.sql  mod.rs
src-tauri/src/mcp/: mod.rs  prompts.rs  resources.rs  server.rs  tools.rs
src-tauri/src/models/: mod.rs  run.rs  task.rs
src-tauri/src/scheduler/: engine.rs
src-tauri/src/webhook/: mod.rs
src/__tests__/: Logs.test.tsx  RunLogModal.test.tsx  TaskDetail.test.tsx  TaskFormModal.test.tsx
src/__tests__/stores/: runs.test.ts  tasks.test.ts
src/components/common/: Toast.tsx
src/components/nl/: AddTaskModal.tsx
src/components/runs/: RunHistory.tsx  RunLogModal.tsx
src/components/scheduler/: NextRunsPreview.tsx
src/components/tasks/: StatusBadge.tsx  TaskDetail.tsx  TaskFormModal.tsx  TaskItem.tsx  TaskSidebar.tsx
src/components/tools/: ToolStatusBar.tsx
src/components/ui/: ConfirmDialog.tsx
src/components/updater/: UpdateChecker.tsx
src/lib/: tauri.ts  types.ts  utils.ts
src/pages/: Dashboard.tsx  Logs.tsx  Settings.tsx
src/stores/: runs.ts  tasks.ts
