[package]
name = "ai-cron"
version = "0.1.0"
description = "AI Cron - Visual AI Agent Task Scheduler"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_cron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"

# HTTP client for webhook
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait
async-trait = "0.1"

# State management
once_cell = "1"
